# github-action-committer-coverage-stats

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  coverage.out  go.mod  go.sum  main.go  sonar-project.properties
.github/workflows/: build.yml
internal/: config.go  config_test.go  coverage.go  git.go  output.go  stats.go
internal/coverage/: cobertura.go  cobertura_test.go  coverage.go
res/tests/: cobertura-001.xml  cobertura-002.xml  cobertura-004.xml  test1.graphql
src/: analysis.rs  config.rs  coverage.rs  git.rs  github.rs  lib.rs  main.rs
src/coverage/: cobertura.rs  lcov.rs
tests/: git.rs  github.rs
