[package]
name = "github_action_committer_coverage_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
json = "0.12.4"
git2 = "0.18.3"
quick-xml = "0.31.0"
mockall = "0.12.1"
email_address = "0.2.4"
